Turn off warnings about illegal reflective access from jogl and clojure