@@ -120,7 +120,15 @@
                       :src-linenum-anchor-prefix "L"
                       :defaults                  {:doc/format :markdown}}
 
-  :jvm-opts          ["-Djna.nosys=true" "-Djava.net.preferIPv4Stack=true" "--illegal-access=warn"]
+  :jvm-opts          ["-Djna.nosys=true"
+                      "-Djava.net.preferIPv4Stack=true"
+                      "--illegal-access=warn"
+                      ;; hide warnings about illegal reflective access by jogl
+                      "--add-opens=java.base/java.lang=ALL-UNNAMED"
+                      "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
+                      "--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED"
+                      ;; hide warnings about illegal reflective access by clojure
+                      "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED"]
   :main ^:skip-aot   com.defold.editor.Start
 
   :uberjar-exclusions [#"^natives/"]
